Update action config

--- a/.github/workflows/qodana_code_quality.yml
+++ b/.github/workflows/qodana_code_quality.yml
@@ -12,8 +12,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
+          ref: ${{ github.event.pull_request.head.sha }}
           fetch-depth: 0
       - name: 'Qodana Scan'
         uses: JetBrains/qodana-action@v2024.2
+        with:
+          args: --property=project.open.type=Maven
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
