Test apply fixes strategy

--- a/.github/workflows/qodana_code_quality.yml
+++ b/.github/workflows/qodana_code_quality.yml
@@ -17,6 +17,6 @@ jobs:
       - name: 'Qodana Scan'
         uses: JetBrains/qodana-action@v2024.2
         with:
-          args: --property=project.open.type=Maven
+          args: --property=project.open.type=Maven, --apply-fixes
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
